--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,22 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  dart_mappable: ^4.2.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  path: ^1.9.0
+  path_provider: ^2.1.4
+  powersync: ^1.7.0
+  record_result: ^1.0.1+2
 
 dev_dependencies:
   bloc_test: ^9.1.7
+  build_runner: ^2.4.12
+  dart_mappable_builder: ^4.2.3
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.4
