--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   dart_mappable: ^4.2.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
@@ -19,6 +20,7 @@ dependencies:
   path_provider: ^2.1.4
   powersync: ^1.7.0
   record_result: ^1.0.1+2
+  supabase_flutter: ^2.6.0
 
 dev_dependencies:
   bloc_test: ^9.1.7
