--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  get_it: ^7.7.0
   intl: ^0.19.0
   path: ^1.9.0
   path_provider: ^2.1.4
