--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   chat_bubbles: ^1.6.0
+  cross_file: ^0.3.4+2
   cupertino_icons: ^1.0.8
   dart_mappable: ^4.2.2
   equatable: ^2.0.5
@@ -22,6 +23,7 @@ dependencies:
   get_it: ^7.7.0
   go_router: ^14.2.7
   hugeicons: ^0.0.7
+  image_picker: ^1.1.2
   intl: ^0.19.0
   path: ^1.9.0
   path_provider: ^2.1.4
