--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  cached_network_image: ^3.4.0
   chat_bubbles: ^1.6.0
   cross_file: ^0.3.4+2
   cupertino_icons: ^1.0.8
