--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dart_mappable: ^4.2.2
   equatable: ^2.0.5
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
@@ -21,6 +23,7 @@ dependencies:
   flutter_list_view: ^1.1.28
   flutter_localizations:
     sdk: flutter
+  flutter_open_app_settings: ^0.1.4
   flutter_svg: ^2.0.10+1
   get_it: ^7.7.0
   go_router: ^14.2.7
