--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_dotenv: ^5.1.0
-  flutter_list_view: ^1.1.28
+  flutter_elastic_list_view: ^0.0.5+2
   flutter_localizations:
     sdk: flutter
   flutter_open_app_settings: ^0.1.4
